--- a/pedido/src/main/resources/application.properties
+++ b/pedido/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1234567
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.rabbitmq.addresses=amqps://vswnozqa:yVUSeom71Zbf1NdvUGnVi0WcMuNfQVuB@jaragua.lmq.cloudamqp.com/vswnozqa
+
+broker.queue.processamento.name=exchange.processamento
