--- a/processamento/src/main/resources/application.properties
+++ b/processamento/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=processamento
+
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/ms-processamento
+spring.datasource.username=postgres
+spring.datasource.password=1234567
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.rabbitmq.addresses=amqps://vswnozqa:yVUSeom71Zbf1NdvUGnVi0WcMuNfQVuB@jaragua.lmq.cloudamqp.com/vswnozqa
+broker.queue.processamento.name=exchange.processamento
